--- a/#src/scss/blocks/product-card.scss
+++ b/#src/scss/blocks/product-card.scss
@@ -161,22 +161,22 @@
   }
   // .gallery-card__slide
   &__slide {
-    height: 228px;
+    // height: 228px;
     // &.swiper-slide {
     //   height: 228px;
     // }
     user-select: none;
     img {
-      width: 100%;
-      height: 100%;
+      // width: 100%;
+      // height: 100%;
       // height: 228px;
       object-fit: cover;
       object-position: center;
       //Для alt
       display: flex;
       justify-content: center;
-      align-items: flex-end;
-      line-height: 100px;
+      align-items: center;
+      // line-height: 100px;
       font-size: 18px;
     }
   }
