folders resctructure, connected in styles.scss

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,32 +1,24 @@
 @import 'vars';
-//<МИКСИНЫ>===============================================================================================
 @import 'mixins';
-//</МИКСИНЫ>===============================================================================================
 
-//<ШРИФТЫ>===============================================================================================
-
-//<Подключаем шрифты>=======================================================================================
+/* Fonts */
 //&display=swap&subset=cyrillic-ext
 // @import url(https://fonts.googleapis.com/css?family=Inter:300,regular,500,700&display=swap&subset=cyrillic-ext);
 @import 'fonts';
-//</Подключаем шрифты>=======================================================================================
 
-//<Иконочные шрифты>==========================================================================================
+/* Icon font */
 //@import "icons";
-//</Иконочные шрифты>==========================================================================================
 
-//<Шрифт по умолчанию>==========================================================================================
+/* Font default */
 $fontFamily: 'Jost', sans-serif;
 $fontSize: 16;
-//</Шрифт по умолчанию>==========================================================================================
 
-//</ШРИФТЫ>=======================================================================================================
-
-//<ПЕРЕМЕННЫЕ>===========================================================================================================
+/* Container params */
 $minWidth: 320px;
 $maxWidth: 1920px;
 $maxWidthContainer: 1256px;
 
+/* Media query */
 $md1: 1366px;
 $md2: 1024px;
 $md3: 992px;
@@ -37,20 +29,21 @@ $md7: 375px;
 
 $mainColor: #000;
 
-//</ПЕРЕМЕННЫЕ>===========================================================================================================
-
-//<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
+/* Nullification, general params */
 @import 'null';
 body {
   background-color: #eeeeee;
   color: $mainColor;
-  &._lock {
+  &.js-lock {
     overflow: hidden;
   }
 }
-//</ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
 
-//<ОБОЛОЧКА>===========================================================================================================
+main {
+  flex: 1 1 auto;
+}
+
+/* Wrapper */
 .wrapper {
   width: 100%;
   max-width: 1920px;
@@ -61,9 +54,8 @@ body {
   display: flex;
   flex-direction: column;
 }
-//</ОБОЛОЧКА>===========================================================================================================
 
-//<ОСНОВНАЯ СЕТКА>===========================================================================================================
+/* Container */
 .container {
   max-width: $maxWidthContainer;
   margin-left: auto;
@@ -71,32 +63,30 @@ body {
   padding-left: $pl;
   padding-right: $pr;
 }
-//</ОСНОВНАЯ СЕТКА>===========================================================================================================
 
-//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
-// @import 'animations';
-@import 'buttons';
-@import 'forms';
-@import 'blocks/slider-control';
-@import 'blocks/logo';
-@import 'blocks/page-nav';
-@import 'blocks/cart';
-@import 'blocks/search';
-@import 'blocks/contacts';
-@import 'blocks/socials';
-@import 'blocks/product-card';
-@import 'blocks/form';
-// @import "ui";
-//</ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
+/* bem-blocks */
+@import 'bem-blocks/buttons';
+@import 'bem-blocks/forms';
+@import 'bem-blocks/slider-control';
+@import 'bem-blocks/logo';
+@import 'bem-blocks/page-nav';
+@import 'bem-blocks/cart';
+@import 'bem-blocks/search';
+@import 'bem-blocks/contacts';
+@import 'bem-blocks/socials';
+@import 'bem-blocks/product-card';
+@import 'bem-blocks/form';
+@import 'bem-blocks/filter';
+@import 'bem-blocks/filter-trigger';
+@import 'bem-blocks/breadcrumbs';
+@import 'bem-blocks/pagination';
+@import 'bem-blocks/view-change';
 
-//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
+/* page-blocks */
+@import 'page-blocks/products-panel';
+
+/* page blocks */
 @import 'header';
 @import 'footer';
 @import 'index';
 @import 'catalog';
-//</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
-
-//<ОСНОВНОЙ БЛОК>====================================================================================================
-main {
-  flex: 1 1 auto;
-}
