--- a/#src/scss/bem-blocks/breadcrumbs.scss
+++ b/#src/scss/bem-blocks/breadcrumbs.scss
@@ -1,8 +1,19 @@
 .breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 20px;
+  font-size: 15px;
+  @media (min-width: $md4) {
+    font-size: 17px;
+  }
+  @media (min-width: $md2) {
+    margin-bottom: 30px;
+  }
   // .breadcrumbs__item
   &__item {
     font-weight: normal;
-    line-height: 1.5;
+    line-height: 1.3;
     color: $grey;
   }
   // .breadcrumbs__link
@@ -12,6 +23,7 @@
     grid-template-columns: repeat(3, min-content);
     column-gap: 5px;
     color: $grey-light;
+    white-space: nowrap; //?
     &::after {
       content: '/';
       color: inherit;
