--- a/#src/scss/bem-blocks/buttons.scss
+++ b/#src/scss/bem-blocks/buttons.scss
@@ -1,7 +1,7 @@
 .button {
   z-index: 0;
   position: relative;
-  display: block;
+  display: inline-block;
   padding: 0.9em 1.3em;
   font-size: 20px;
   line-height: 1.5;
