--- a/#src/scss/bem-blocks/filter.scss
+++ b/#src/scss/bem-blocks/filter.scss
@@ -1,4 +1,8 @@
 .filter {
+  // .filter__wrapper-for-scroll
+  &__wrapper-for-scroll {
+    overflow: auto;
+  }
   // .filter__group
   &__group {
     border-bottom: 1px solid $grey-light;
@@ -10,6 +14,48 @@
       .group-filter__input {
         margin-right: 20px;
       }
+    }
+    &--mobile {
+      position: relative;
+      padding: 20px;
+      border-bottom: 1px solid $grey;
+      @media (min-width: 1280px) {
+        display: none;
+      }
+    }
+  }
+  // .filter__heading
+  &__heading {
+    font-size: 22px;
+    font-weight: 500;
+  }
+  // .filter__close-icon
+  &__close-icon {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    width: 32px;
+    height: 32px;
+    opacity: 0.3;
+    transform: translateY(-50%);
+    &:hover,
+    &:active {
+      opacity: 1;
+    }
+    &::before,
+    &::after {
+      position: absolute;
+      left: 15px;
+      content: ' ';
+      height: 33px;
+      width: 2px;
+      background-color: #333;
+    }
+    &::before {
+      transform: rotate(45deg);
+    }
+    &::after {
+      transform: rotate(-45deg);
     }
   }
 }
